--- a/src/FubuMVC.Validation/validation.asset.config
+++ b/src/FubuMVC.Validation/validation.asset.config
@@ -1,12 +1,9 @@
-continuations is jquery.continuations.js
-continuations requires jquery
-jquery.form.js requires jquery
-jquery.continuations.forms.js requires continuations, jquery.form.js
-
 fubuvalidation.localization.js requires jquery, underscore
 fubuvalidation.rules.js requires fubuvalidation.localization.js
 fubuvalidation.core.js requires underscore, fubuvalidation.rules.js, continuations
 fubuvalidation.ui.js requires underscore, jquery.continuations.forms.js
 fubuvalidation.plugin.js requires fubuvalidation.ui.js, fubuvalidation.core.js, continuations
+
+fubuvalidation is fubuvalidation.plugin.js
 
 specs/fubuvalidation.rules.spec.js requires fubuvalidation.core.js
