--- a/src/FubuValidation.Tests/FubuValidation.Tests.csproj
+++ b/src/FubuValidation.Tests/FubuValidation.Tests.csproj
@@ -86,7 +86,7 @@
     <Compile Include="NotificationMessageTester.cs" />
     <Compile Include="NotificationTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SourceWithDependenciesTest.cs" />
+    <Compile Include="intregated_rule_using_service_tester.cs" />
     <Compile Include="Fields\when_evaluating_greater_or_equal_to_zero_rule.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -99,6 +99,8 @@
     <Compile Include="ValidationContextTester.cs" />
     <Compile Include="ValidationQueryTester.cs" />
     <Compile Include="ValidationRegistryTester.cs" />
+    <Compile Include="ValidationScenario.cs" />
+    <Compile Include="ValidatorTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuValidation\FubuValidation.csproj">
