CHECKPOINT: New querying model in place -- introduced the ValidationGraph. Killed off the old IValidationQuery. First stab at diagnostics

--- a/src/FubuValidation.StructureMap/FubuValidation.StructureMap.csproj
+++ b/src/FubuValidation.StructureMap/FubuValidation.StructureMap.csproj
@@ -50,6 +50,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="FubuValidationRegistry.cs" />
     <Compile Include="ValidationBootstrapExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
