--- a/src/FubuValidation/FubuValidation.csproj
+++ b/src/FubuValidation/FubuValidation.csproj
@@ -92,6 +92,7 @@
     <Compile Include="ValidationKeys.cs" />
     <Compile Include="ValidationAttribute.cs" />
     <Compile Include="ValidationPlan.cs" />
+    <Compile Include="ValidationScenario.cs" />
     <Compile Include="ValidationStep.cs" />
     <Compile Include="Validator.cs" />
     <Compile Include="ValidationRegistry.cs" />
