Checkpoint: registration now done through service registry

--- a/ripple.config
+++ b/ripple.config
@@ -23,5 +23,7 @@
     <string>FubuMVC.SelfHost</string>
     <string>FubuMVC.StructureMap</string>
     <string>Storyteller</string>
+    <string>FubuMVc.Core.Assets</string>
+    <string>FubuMVC.Core.Assets</string>
   </Floats>
 </ripple>
