--- a/src/FubuMVC.HelloValidation/packages.config
+++ b/src/FubuMVC.HelloValidation/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="1.0.0.429" targetFramework="net40" />
-  <package id="FubuCore" version="1.0.0.218" targetFramework="net40" />
-  <package id="FubuLocalization" version="0.9.5.116" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.9.1334" targetFramework="net40" />
-  <package id="FubuMVC.Core.Assets" version="0.9.9.73" targetFramework="net40" />
-  <package id="FubuMVC.Core.UI" version="0.9.9.94" targetFramework="net40" />
-  <package id="FubuMVC.Core.View" version="0.9.9.85" targetFramework="net40" />
-  <package id="FubuMVC.Spark" version="0.9.9.85" targetFramework="net40" />
-  <package id="FubuMVC.StructureMap" version="0.9.9.1334" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.138" targetFramework="net40" />
+  <package id="Bottles" version="1.0.0.440" targetFramework="net40" />
+  <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
+  <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.9.1353" targetFramework="net40" />
+  <package id="FubuMVC.Core.Assets" version="0.9.9.92" targetFramework="net40" />
+  <package id="FubuMVC.Core.UI" version="0.9.9.103" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="0.9.9.97" targetFramework="net40" />
+  <package id="FubuMVC.Spark" version="0.9.9.97" targetFramework="net40" />
+  <package id="FubuMVC.StructureMap" version="0.9.9.1353" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.144" targetFramework="net40" />
+  <package id="Spark" version="1.7.5.0" targetFramework="net40" />
 </packages>
