--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -78,6 +78,10 @@
     <Compile Include="DefaultValidationChainFilter.cs" />
     <Compile Include="HasInputType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Remote\IRuleRunner.cs" />
+    <Compile Include="Remote\RemoteFieldRule.cs" />
+    <Compile Include="Remote\RemoteRuleGraph.cs" />
+    <Compile Include="Remote\ValidateField.cs" />
     <Compile Include="ValidationConvention.cs" />
     <Compile Include="ValidationFilter.cs" />
     <Compile Include="ModelBindingErrors.cs" />
