--- a/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
+++ b/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
@@ -109,6 +109,7 @@
     <Compile Include="LoFi\IntegratedLoFiEndpoint.cs" />
     <Compile Include="LoFi\IntegratedLoFiTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="remote_rule_integrated_tester.cs" />
     <Compile Include="ValidationHarness.cs" />
     <Compile Include="ValidationTestFubuRegistry.cs" />
   </ItemGroup>
