--- a/src/FubuValidation/FubuValidation.csproj
+++ b/src/FubuValidation/FubuValidation.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Fields\IFieldValidationSource.cs" />
     <Compile Include="Fields\MaximumLengthRule.cs" />
     <Compile Include="Fields\MinimumLengthRule.cs" />
+    <Compile Include="Fields\RemoteAttribute.cs" />
     <Compile Include="Fields\RequiredFieldRule.cs" />
     <Compile Include="Fields\LambdaFieldValidationSource.cs" />
     <Compile Include="FubuValidationException.cs" />
