--- a/src/FubuMVC.Validation.Tests/packages.config
+++ b/src/FubuMVC.Validation.Tests/packages.config
@@ -1,28 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="1.0.0.440" targetFramework="net40" />
-  <package id="Castle.Core" version="3.0.0.4001" targetFramework="net40" />
-  <package id="DotNetZip" version="1.9.1.8" />
-  <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
-  <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.9.1353" targetFramework="net40" />
-  <package id="FubuMVC.SelfHost" version="0.9.9.1353" targetFramework="net40" />
-  <package id="FubuMVC.StructureMap" version="0.9.9.1353" targetFramework="net40" />
-  <package id="FubuTestingSupport" version="1.0.0.225" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.144" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20918.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
-  <package id="NUnit" version="2.5.10.11092" />
-  <package id="RhinoMocks" version="3.6" targetFramework="net40" />
-  <package id="Selenium.RC" version="2.21.0" targetFramework="net40" />
-  <package id="Selenium.Support" version="2.25.1" targetFramework="net40" />
-  <package id="Selenium.WebDriver" version="2.25.1" targetFramework="net40" />
-  <package id="Selenium.WebDriverBackedSelenium" version="2.25.1" targetFramework="net40" />
-  <package id="Serenity" version="0.9.8.116" targetFramework="net40" />
-  <package id="Storyteller2" version="2.0.0.9" targetFramework="net40" />
-  <package id="structuremap" version="2.6.3" />
-  <package id="structuremap.automocking" version="2.6.3" targetFramework="net40" />
+    <package id="Bottles" version="1.0.0.440" targetFramework="net40" />
+    <package id="Castle.Core" version="3.0.0.4001" targetFramework="net40" />
+    <package id="DotNetZip" version="1.9.1.8" />
+    <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
+    <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
+    <package id="FubuMVC.Core" version="0.9.9.1353" targetFramework="net40" />
+    <package id="FubuMVC.Core.UI" version="0.9.9.103" targetFramework="net40" />
+    <package id="FubuMVC.SelfHost" version="0.9.9.1353" targetFramework="net40" />
+    <package id="FubuMVC.StructureMap" version="0.9.9.1353" targetFramework="net40" />
+    <package id="FubuTestingSupport" version="1.0.0.225" targetFramework="net40" />
+    <package id="HtmlTags" version="1.2.0.144" targetFramework="net40" />
+    <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
+    <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
+    <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20918.0" targetFramework="net40" />
+    <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+    <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+    <package id="NUnit" version="2.5.10.11092" />
+    <package id="RhinoMocks" version="3.6" targetFramework="net40" />
+    <package id="Selenium.RC" version="2.21.0" targetFramework="net40" />
+    <package id="Selenium.Support" version="2.25.1" targetFramework="net40" />
+    <package id="Selenium.WebDriver" version="2.25.1" targetFramework="net40" />
+    <package id="Selenium.WebDriverBackedSelenium" version="2.25.1" targetFramework="net40" />
+    <package id="Serenity" version="0.9.8.116" targetFramework="net40" />
+    <package id="Storyteller2" version="2.0.0.9" targetFramework="net40" />
+    <package id="structuremap" version="2.6.3" />
+    <package id="structuremap.automocking" version="2.6.3" targetFramework="net40" />
 </packages>
