--- a/src/FubuMVC.Validation.Tests/packages.config
+++ b/src/FubuMVC.Validation.Tests/packages.config
@@ -7,6 +7,7 @@
     <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
     <package id="FubuMVC.Core" version="0.9.9.1353" targetFramework="net40" />
     <package id="FubuMVC.Core.UI" version="0.9.9.103" targetFramework="net40" />
+    <package id="FubuMVC.Core.View" version="0.9.9.97" targetFramework="net40" />
     <package id="FubuMVC.SelfHost" version="0.9.9.1353" targetFramework="net40" />
     <package id="FubuMVC.StructureMap" version="0.9.9.1353" targetFramework="net40" />
     <package id="FubuTestingSupport" version="1.0.0.225" targetFramework="net40" />
