--- a/src/FubuMVC.Validation/validation.asset.config
+++ b/src/FubuMVC.Validation/validation.asset.config
@@ -6,4 +6,6 @@ fubuvalidation.plugin.js requires fubuvalidation.ui.js, fubuvalidation.core.js, 
 
 fubuvalidation is fubuvalidation.plugin.js
 
+ValidationActivator.js requires fubuvalidation
+
 specs/fubuvalidation.rules.spec.js requires fubuvalidation.core.js
