--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -44,19 +44,16 @@
       <HintPath>..\packages\FubuLocalization.0.9.5.124\lib\FubuLocalization.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Core">
-      <HintPath>..\packages\FubuMVC.Core.0.9.9.1353\lib\net40\FubuMVC.Core.dll</HintPath>
+      <HintPath>..\packages\FubuMVC.Core.0.9.9.1366\lib\net40\FubuMVC.Core.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Core.UI">
-      <HintPath>..\packages\FubuMVC.Core.UI.0.9.9.103\lib\net40\FubuMVC.Core.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="FubuMVC.Core.View">
-      <HintPath>..\packages\FubuMVC.Core.View.0.9.9.97\lib\net40\FubuMVC.Core.View.dll</HintPath>
+      <HintPath>..\packages\FubuMVC.Core.UI.0.9.9.109\lib\net40\FubuMVC.Core.UI.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.SelfHost">
-      <HintPath>..\packages\FubuMVC.SelfHost.0.9.9.1353\lib\net40\FubuMVC.SelfHost.dll</HintPath>
+      <HintPath>..\packages\FubuMVC.SelfHost.0.9.9.1366\lib\net40\FubuMVC.SelfHost.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.StructureMap">
-      <HintPath>..\packages\FubuMVC.StructureMap.0.9.9.1353\lib\net40\FubuMVC.StructureMap.dll</HintPath>
+      <HintPath>..\packages\FubuMVC.StructureMap.0.9.9.1366\lib\net40\FubuMVC.StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.TestingHarness">
       <HintPath>..\packages\FubuMVC.TestingHarness.0.9.9.1334\lib\net40\FubuMVC.TestingHarness.dll</HintPath>
@@ -153,8 +150,12 @@
     <Compile Include="SampleInputModel.cs" />
     <Compile Include="AjaxValidationTester.cs" />
     <Compile Include="UI\CssValidationAnnotationStrategyTester.cs" />
+    <Compile Include="UI\DefaultValidationSummaryNodeTester.cs" />
+    <Compile Include="UI\DefaultValidationSummaryWriterTester.cs" />
     <Compile Include="UI\FieldValidationElementModifierTester.cs" />
     <Compile Include="UI\FieldValidationModifierTester.cs" />
+    <Compile Include="UI\FormValidationModeTester.cs" />
+    <Compile Include="UI\FormValidationSummaryModifierTester.cs" />
     <Compile Include="UI\RemoteValidationElementModifierTester.cs" />
     <Compile Include="ValidationActionFilterTester.cs" />
     <Compile Include="ValidationConventionTester.cs" />
