--- a/src/FubuMVC.Validation/packages.config
+++ b/src/FubuMVC.Validation/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="1.0.0.440" targetFramework="net40" />
-  <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
-  <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.9.1353" targetFramework="net40" />
-  <package id="FubuMVC.Core.UI" version="0.9.9.103" targetFramework="net40" />
-  <package id="FubuMVC.Core.View" version="0.9.9.97" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.144" targetFramework="net40" />
+    <package id="Bottles" version="1.0.0.440" targetFramework="net40" />
+    <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
+    <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
+    <package id="FubuMVC.Core" version="0.9.9.1366" targetFramework="net40" />
+    <package id="FubuMVC.Core.Assets" version="0.9.9.94" targetFramework="net40" />
+    <package id="FubuMVC.Core.UI" version="0.9.9.109" targetFramework="net40" />
+    <package id="FubuMVC.Core.View" version="0.9.9.97" targetFramework="net40" />
+    <package id="HtmlTags" version="1.2.0.144" targetFramework="net40" />
 </packages>
