--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Bottles">
-      <HintPath>..\packages\Bottles.1.0.0.440\lib\Bottles.dll</HintPath>
+      <HintPath>..\packages\Bottles.1.0.0.441\lib\Bottles.dll</HintPath>
     </Reference>
     <Reference Include="FubuCore">
       <HintPath>..\packages\FubuCore.1.0.0.225\lib\FubuCore.dll</HintPath>
@@ -43,7 +43,7 @@
       <HintPath>..\packages\FubuLocalization.0.9.5.124\lib\FubuLocalization.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Core">
-      <HintPath>..\packages\FubuMVC.Core.0.9.9.1366\lib\net40\FubuMVC.Core.dll</HintPath>
+      <HintPath>..\packages\FubuMVC.Core.0.9.9.1369\lib\net40\FubuMVC.Core.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.Core.Assets">
       <HintPath>..\packages\FubuMVC.Core.Assets.0.9.9.94\lib\net40\FubuMVC.Core.Assets.dll</HintPath>
@@ -56,7 +56,7 @@
       <HintPath>..\packages\FubuMVC.Core.View.0.9.9.97\lib\net40\FubuMVC.Core.View.dll</HintPath>
     </Reference>
     <Reference Include="HtmlTags">
-      <HintPath>..\packages\HtmlTags.1.2.0.144\lib\4.0\HtmlTags.dll</HintPath>
+      <HintPath>..\packages\HtmlTags.1.2.0.145\lib\4.0\HtmlTags.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -81,7 +81,7 @@
     <Compile Include="UI\DefaultValidationSummaryNode.cs" />
     <Compile Include="UI\DefaultValidationSummaryWriter.cs" />
     <Compile Include="UI\FieldValidationElementModifier.cs" />
-    <Compile Include="UI\FormValidationMode.cs" />
+    <Compile Include="UI\FormActivationModifier.cs" />
     <Compile Include="UI\FormValidationSummaryModifier.cs" />
     <Compile Include="UI\IFieldValidationModifier.cs" />
     <Compile Include="IAjaxValidationFailureHandler.cs" />
