Rev'ing the nugets. Adds ST to the build

--- a/ripple.config
+++ b/ripple.config
@@ -25,5 +25,6 @@
     <string>Storyteller</string>
     <string>FubuMVc.Core.Assets</string>
     <string>FubuMVC.Core.Assets</string>
+    <string>Storyteller2</string>
   </Floats>
 </ripple>
