--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -144,8 +144,12 @@
     <Compile Include="HasInputTypeTester.cs" />
     <Compile Include="ModelBindingErrorsTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteRuleExpressionTester.cs" />
     <Compile Include="RemoteRuleGraphActivatorTester.cs" />
+    <Compile Include="Remote\RemoteFieldValidationRuleFilterTester.cs" />
+    <Compile Include="Remote\RemoteRuleQueryTester.cs" />
     <Compile Include="Remote\RemoteFieldRuleTester.cs" />
+    <Compile Include="Remote\RemoteRuleAttributeFilterTester.cs" />
     <Compile Include="Remote\RemoteRuleGraphTester.cs" />
     <Compile Include="Remote\RuleRunnerTester.cs" />
     <Compile Include="Remote\ValidateFieldEndpointTester.cs" />
