--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -156,14 +156,23 @@
     <Compile Include="Remote\ValidationTargetResolverTester.cs" />
     <Compile Include="SampleInputModel.cs" />
     <Compile Include="AjaxValidationTester.cs" />
+    <Compile Include="UI\MaxValueModifierTester.cs" />
+    <Compile Include="UI\MinValueModifierTester.cs" />
     <Compile Include="UI\CssValidationAnnotationStrategyTester.cs" />
+    <Compile Include="UI\DateElementModifierTester.cs" />
     <Compile Include="UI\DefaultValidationSummaryNodeTester.cs" />
     <Compile Include="UI\DefaultValidationSummaryWriterTester.cs" />
     <Compile Include="UI\FieldValidationElementModifierTester.cs" />
     <Compile Include="UI\FieldValidationModifierTester.cs" />
     <Compile Include="UI\FormActivationModifierTester.cs" />
     <Compile Include="UI\FormValidationSummaryModifierTester.cs" />
+    <Compile Include="UI\MaximumLengthModifierTester.cs" />
+    <Compile Include="UI\MinimumLengthModifierTester.cs" />
+    <Compile Include="UI\NumberElementModifierTester.cs" />
+    <Compile Include="UI\RangeLengthModifierTester.cs" />
     <Compile Include="UI\RemoteValidationElementModifierTester.cs" />
+    <Compile Include="UI\ValidationElementModifierContext.cs" />
+    <Compile Include="UI\ValidationElementModifierScenario.cs" />
     <Compile Include="ValidationActionFilterTester.cs" />
     <Compile Include="ValidationConventionTester.cs" />
     <Compile Include="ValidationFilterTester.cs" />
