--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Remote\RemoteAttribute.cs" />
     <Compile Include="UI\AttachDefaultValidationSummary.cs" />
     <Compile Include="UI\CssValidationAnnotationStrategy.cs" />
+    <Compile Include="UI\DateElementModifier.cs" />
     <Compile Include="UI\DefaultValidationSummaryNode.cs" />
     <Compile Include="UI\DefaultValidationSummaryWriter.cs" />
     <Compile Include="UI\FieldValidationElementModifier.cs" />
@@ -101,7 +102,14 @@
     <Compile Include="Remote\RemoteRuleGraph.cs" />
     <Compile Include="Remote\RemoteRuleGraphActivator.cs" />
     <Compile Include="Remote\ValidateField.cs" />
+    <Compile Include="UI\InputElementModifier.cs" />
     <Compile Include="UI\IValidationAnnotationStrategy.cs" />
+    <Compile Include="UI\MaxValueModifier.cs" />
+    <Compile Include="UI\MaximumLengthModifier.cs" />
+    <Compile Include="UI\MinimumLengthModifier.cs" />
+    <Compile Include="UI\MinValueModifier.cs" />
+    <Compile Include="UI\NumberElementModifier.cs" />
+    <Compile Include="UI\RangeLengthModifier.cs" />
     <Compile Include="UI\RemoteValidationElementModifier.cs" />
     <Compile Include="UI\ValidationSummarySource.cs" />
     <Compile Include="ValidationSummary.cs" />
