--- a/src/FubuValidation/FubuValidation.csproj
+++ b/src/FubuValidation/FubuValidation.csproj
@@ -56,12 +56,14 @@
     <Compile Include="ClassValidationRules.cs" />
     <Compile Include="CollectionLengthAttribute.cs" />
     <Compile Include="ContinueValidationAttribute.cs" />
+    <Compile Include="EmailAttribute.cs" />
     <Compile Include="Fields\ConditionalFieldRule.cs" />
     <Compile Include="CoreExtensions.cs" />
     <Compile Include="Fields\AttributeFieldValidationSource.cs" />
     <Compile Include="Fields\ClassFieldValidationRules.cs" />
     <Compile Include="Fields\CollectionLengthRule.cs" />
     <Compile Include="Fields\ContinuationFieldRule.cs" />
+    <Compile Include="Fields\EmailFieldRule.cs" />
     <Compile Include="Fields\FieldRuleSource.cs" />
     <Compile Include="Fields\FieldRulesRegistry.cs" />
     <Compile Include="Fields\FieldValidationAttribute.cs" />
@@ -73,7 +75,10 @@
     <Compile Include="Fields\IFieldValidationRule.cs" />
     <Compile Include="Fields\IFieldValidationSource.cs" />
     <Compile Include="Fields\MaximumLengthRule.cs" />
+    <Compile Include="Fields\MaxValueFieldRule.cs" />
     <Compile Include="Fields\MinimumLengthRule.cs" />
+    <Compile Include="Fields\MinValueFieldRule.cs" />
+    <Compile Include="Fields\RangeLengthFieldRule.cs" />
     <Compile Include="Fields\RequiredFieldRule.cs" />
     <Compile Include="Fields\LambdaFieldValidationSource.cs" />
     <Compile Include="FubuValidationException.cs" />
@@ -84,9 +89,12 @@
     <Compile Include="IValidationSource.cs" />
     <Compile Include="IValidator.cs" />
     <Compile Include="MaximumStringLengthAttribute.cs" />
+    <Compile Include="MaxValueAttribute.cs" />
     <Compile Include="MinimumStringLengthAttribute.cs" />
+    <Compile Include="MinValueAttribute.cs" />
     <Compile Include="Notification.cs" />
     <Compile Include="NotificationMessage.cs" />
+    <Compile Include="RangeLengthAttribute.cs" />
     <Compile Include="TemplateExtensions.cs" />
     <Compile Include="TemplateValue.cs" />
     <Compile Include="ValidationContext.cs" />
