Adds end to end coverage against all element modifiers and clientside rules. Closes #19, closes #20, closes #21, closes #26

--- a/src/FubuMVC.Validation.StoryTeller/FubuMVC.Validation.StoryTeller.csproj
+++ b/src/FubuMVC.Validation.StoryTeller/FubuMVC.Validation.StoryTeller.csproj
@@ -117,7 +117,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fixtures\IntegrationScreenFixture.cs" />
     <Compile Include="Fixtures\SystemStateFixture.cs" />
+    <Compile Include="IntegrationEndpoint.cs" />
+    <Compile Include="IntegrationModel.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Fixtures\CreateUserScreenFixture.cs" />
     <Compile Include="IUserService.cs" />
