--- a/src/FubuValidation/FubuValidation.csproj
+++ b/src/FubuValidation/FubuValidation.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Fields\IFieldValidationQuery.cs" />
     <Compile Include="Fields\IFieldValidationRule.cs" />
     <Compile Include="Fields\IFieldValidationSource.cs" />
+    <Compile Include="Fields\IsValid.cs" />
     <Compile Include="Fields\MaximumLengthRule.cs" />
     <Compile Include="Fields\MaxValueFieldRule.cs" />
     <Compile Include="Fields\MinimumLengthRule.cs" />
