Introduced the ValidationMode class. No activation for non-validated forms (with end to end coverage). Adds the NotValidatedAttribute.

--- a/src/FubuMVC.Validation.StoryTeller/FubuMVC.Validation.StoryTeller.csproj
+++ b/src/FubuMVC.Validation.StoryTeller/FubuMVC.Validation.StoryTeller.csproj
@@ -119,9 +119,12 @@
   <ItemGroup>
     <Compile Include="ClassValidationModel.cs" />
     <Compile Include="Fixtures\ClassValidationScreenFixture.cs" />
+    <Compile Include="Fixtures\IgnoredEndpointScreenFixture.cs" />
     <Compile Include="Fixtures\SelectTagScreenFixture.cs" />
     <Compile Include="Fixtures\IntegrationScreenFixture.cs" />
     <Compile Include="Fixtures\SystemStateFixture.cs" />
+    <Compile Include="Fixtures\ValidationScreenFixture.cs" />
+    <Compile Include="IgnoredModel.cs" />
     <Compile Include="IntegrationEndpoint.cs" />
     <Compile Include="IntegrationModel.cs" />
     <Compile Include="SelectTagModel.cs" />
