--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -143,6 +143,7 @@
     <Compile Include="FubuValidationServiceRegistryTester.cs" />
     <Compile Include="HasInputTypeTester.cs" />
     <Compile Include="ModelBindingErrorsTester.cs" />
+    <Compile Include="NotValidatedAttributeFilterTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteRuleExpressionTester.cs" />
     <Compile Include="RemoteRuleGraphActivatorTester.cs" />
@@ -177,6 +178,7 @@
     <Compile Include="ValidationConventionTester.cs" />
     <Compile Include="ValidationFilterTester.cs" />
     <Compile Include="DefaultValidationFilterTester.cs" />
+    <Compile Include="ValidationModeTester.cs" />
     <Compile Include="ValidationRegistrationActivatorTester.cs" />
   </ItemGroup>
   <ItemGroup>
