Checkpoint: rewrite of the old UI rendering mechanism. Introduced the pluggable rendering strategies

--- a/src/FubuMVC.Validation/validation.asset.config
+++ b/src/FubuMVC.Validation/validation.asset.config
@@ -1,8 +1,8 @@
 fubuvalidation.localization.js requires jquery, underscore
 fubuvalidation.rules.js requires fubuvalidation.localization.js
 fubuvalidation.core.js requires underscore, fubuvalidation.rules.js, continuations
-fubuvalidation.ui.js requires underscore, jquery.continuations.forms.js
-fubuvalidation.plugin.js requires fubuvalidation.ui.js, fubuvalidation.core.js, continuations
+fubuvalidation.ui.js requires underscore, jquery
+fubuvalidation.plugin.js requires fubuvalidation.ui.js, fubuvalidation.core.js, continuations, jquery.continuations.forms.js
 
 fubuvalidation is fubuvalidation.plugin.js
 
